manifest-execute/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: amorphie-tag-execute
  namespace: amorphie-tag-execute
spec:
  selector:
    app: amorphie-tag-execute
  ports:
    - port: 5000
      targetPort: 5000
